Added few styles

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </div>
             <div class="right">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <a href="#">Children</a>
+                <a href="#" title="children">Children</a>
                 <i class="fa-regular fa-bell"></i>
                 <div id="he">
                   <img src="./icons/p2.png" class="p" >
-                  <i class="fa-solid fa-chevron-down" style="font-size: 16px; position: relative; bottom: 5px;"></i>
+                  <i class="fa-solid fa-chevron-down" id="down" style="font-size: 16px; position: relative; bottom: 5px;"></i>
                 </div>
             </div>
         </div>
